# Small-LLM-Creation

./: README.md  fine_tune_inference.py  fine_tune_model.py  pyproject.toml  slm_initial_testing.ipynb
Quarter-Variance-LLM/: prep_quarter_training_data.py  train.jsonl  val.jsonl
Sample-Select/: prep_sample_select.py  synthesize_metrics.py  train.jsonl  val.jsonl
Sample-Size-LLM/: make_audit_sample_size_synth.py  prep_training_data.py  val.jsonl
Sample-Size-LLM/sample-size-sft-lora/: README.md
audit_synth/ex_00000/: population.csv  sample_size_calculation.json
audit_synth/ex_00001/: population.csv
audit_synth/ex_00002/: population.csv
audit_synth/ex_00003/: sample_size_calculation.json
audit_synth/ex_00004/: population.csv
audit_synth/ex_00005/: population.csv
audit_synth/ex_00006/: population.csv
audit_synth/ex_00008/: sample_size_calculation.json
audit_synth/ex_00009/: population.csv
audit_synth/ex_00010/: population.csv  sample_size_calculation.json
audit_synth/ex_00011/: population.csv
audit_synth/ex_00012/: sample_size_calculation.json
audit_synth/ex_00013/: population.csv
audit_synth/ex_00014/: population.csv
audit_synth/ex_00016/: population.csv
audit_synth/ex_00018/: population.csv
audit_synth/ex_00019/: population.csv
audit_synth/ex_00020/: population.csv
audit_synth/ex_00021/: population.csv
audit_synth/ex_00023/: population.csv
audit_synth/ex_00024/: population.csv
audit_synth/ex_00025/: population.csv
data/: Sample%20v2.xlsx
misc/: utils.py
notebooks/: slm_initial_testing.ipynb
src/: fine_tune_model.py
(+546 files in other folders)
