[project]
name = "Small-LLM-Creation"
version = "0.1.0"
description = "A collection of scripts for fine-tuning and training LLMs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "torchaudio>=2.10.0",
    "transformers>=5.1.0",
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "peft>=0.18.1",
    "trl>=0.28.0",
    "huggingface-hub>=1.4.1",
    "safetensors>=0.7.0",
    "tokenizers>=0.22.2",
    "numpy>=2.4.2",
    "tqdm>=4.67.3",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"